--- a/recursos.html
+++ b/recursos.html
@@ -4,28 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Minha Interface Flexbox</title>
+    <title>Recursos - Minha Interface Flexbox</title>
 </head>
 <body>
     <header>
-        <h1>Minha Interface Flexbox</h1>
+        <h1>Recursos</h1>
     </header>
     <nav>
         <ul>
             <li><a href="index.html">Página Inicial</a></li>
-            <li><a href="#">Sobre Nós</a></li>
-            <li><a href="#">Serviços</a></li>
             <li><a href="recursos.html">Recursos</a></li>
+            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
     </nav>
     <main>
         <section>
-            <h2>Bem-vindo ao Nosso Site</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </section>
-        <section>
-            <h2>Nossos Serviços</h2>
-            <p>Oferecemos uma variedade de serviços incríveis.</p>
+            <h2>Nossos Recursos</h2>
+            <p>Aqui estão alguns dos recursos que oferecemos.</p>
         </section>
     </main>
     <footer>
